# BreachedSpeak

./: .editorconfig  .gitignore  .wakatime-project  BuildTest.sh  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: help.yml
.github/ISSUE_TEMPLATE/: config.yml
cmake/: BreachedSpeakConfig.cmake.in  BuildTypes.cmake  Cache.cmake  ClangFormat.cmake  Dependencies.cmake  InstallRules.cmake  Prelude.cmake  ProjectOptions.cmake  ProjectPackage.cmake  SpellCheck.cmake
cmake/modules/: Log.cmake
docs/: BUILDING.md
include/BreachedSpeak/: plugin.h
source/: plugin.cpp
tooling/dev-environment/: .editorconfig.in  EditorConfig.cmake
